Incorporating overflow fix

--- a/user/the_next_reddit.css
+++ b/user/the_next_reddit.css
@@ -23,6 +23,7 @@
         border-bottom: none !important;
         font-size: 105% !important;
         overflow: visible !important;
+        max-width: 86%;
     }
     #sr-header-area .width-clip {
         position: relative !important;
@@ -32,6 +33,7 @@
         float: left;
         padding-left: 5px !important;
         padding-bottom: 3px !important;
+        max-width: 86%;
     }
     #header-bottom-left .redditname, #header-bottom-left .pagename {
         display: none !important; /* overlaps with my reddits list */
